--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             <a href="geo_junho.html" class="menu-btn px-8 py-5 bg-green-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-green-800 transition-colors flex items-center justify-center gap-3">
                 <span>🌎 América Rural e Mineração - Geografia</span>
             </a>
+            <a href="geografia_8.html" class="menu-btn px-8 py-5 bg-green-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-green-800 transition-colors flex items-center justify-center gap-3">
+                <span>🌾 Modelos Agrários - Geografia</span>
+            </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
             Para alunos do <strong>8º ano</strong> &middot; Desenvolvido para facilitar seus estudos!
